--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ body {
     flex-direction: column;
     align-items: center;
     font-size: 18px;
+    background-color: black;
+    color: white;
 }
 
 h1 {
@@ -23,4 +25,12 @@ h1 {
     font-weight: bold;
     font-style: italic;
     color: #999;
+}
+
+#data{
+    display: flex;
+    color: black;
+    text-align: center;
+    justify-content:flex-end    
+     
 }
